@@ -57,17 +57,17 @@ namespace MonoDevelop.XmlEditor
 			XmlSchemaManager.UserSchemaRemoved += UserSchemaRemoved;
 			SetInitialValues();
 			
-/* FIXME: this causes build breakage
 			MonoDevelop.SourceEditor.SourceEditorView view = 
 				Document.GetContent<MonoDevelop.SourceEditor.SourceEditorView> ();
 			if (view != null && view.Document.SyntaxMode == null) {
-				Mono.TextEditor.Highlighting.SyntaxMode mode = Mono.TextEditor.Highlighting.SyntaxModeService.GetSyntaxMode (ApplicationXmlMimeType);
+				Mono.TextEditor.Highlighting.SyntaxMode mode = 
+					Mono.TextEditor.Highlighting.SyntaxModeService.GetSyntaxMode (ApplicationXmlMimeType);
 				if (mode != null)
 					view.Document.SyntaxMode = mode;
 				else
-					LoggingService.LogWarning ("XmlTextEditorExtension could not get SyntaxMode for mimetype '" + ApplicationXmlMimeType + "'.");
+					LoggingService.LogWarning ("XmlTextEditorExtension could not get SyntaxMode for mimetype '" 
+					    + ApplicationXmlMimeType + "'.");
 			}
-*/
 		}
 		
 		bool disposed;
